--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </script>
 </head>
 
-<body x-data='{
+<body class="overflow-x-hidden" x-data='{
     input: 0,
     seas: "",
     sazi: 1
@@ -87,17 +87,17 @@
     </div>
 
     <div class="flex flex-row justify-start gap-2 w-4/5 mx-auto mt-2">
-        <button @click="input+=0.5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">0.5杯</button>
-        <button @click="input+=1" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">１杯</button>
-        <button @click="input+=2" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">２杯</button>
-        <button @click="input+=3" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">３杯</button>
+        <button @click="input=Number(input)+0.5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">0.5杯</button>
+        <button @click="input=Number(input)+1" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">１杯</button>
+        <button @click="input=Number(input)+2" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">２杯</button>
+        <button @click="input=Number(input)+3" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">３杯</button>
     </div>
 
     <div class="flex flex-row justify-start gap-2 w-4/5 mx-auto mt-2">
-        <button @click="input=input*0.5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">半分</button>
-        <button @click="input=input*2" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">２倍</button>
-        <button @click="input=input*3" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">３倍</button>
-        <button @click="input=input*5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">５倍</button>
+        <button @click="input=Number(input)+0.5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">半分</button>
+        <button @click="input=Number(input)*2" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">２倍</button>
+        <button @click="input=Number(input)*3" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">３倍</button>
+        <button @click="input=Number(input)*5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">５倍</button>
     </div>
     <!-- 結果 -->
     <div class="w-3/4 mx-auto mt-20">
