--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     </script>
 </head>
 
-<body class="overflow-x-hidden" x-data='{
+<body class="w-100 overflow-x-hidden" x-data='{
     input: 0,
     seas: "",
     sazi: 1
    }'>
 
-    <div class="flex flex-row justify-start gap-2 w-4/5 mx-auto mt-4">
+    <div class="flex flex-row justify-start gap-2 w-4/5 mx-8 mt-4">
         <label>
             <select v class="h-16 text-2xl" name="seasoning" id="seasoning" x-model="seas">
                 <option value="0">--調味料を--
@@ -70,30 +70,30 @@
             </option>
             </select>
         </label>
-        <input x-model="input" type="number" class=" w-16 rounded-lg text-3xl my-0">杯
+        <input x-model="input" type="number" class=" w-14 rounded-lg text-2xl my-0">杯
     </div>
 
-    <div class="flex flex-row justify-start gap-3 w-4/5 mx-auto mt-2">
+    <div class="flex flex-row justify-start gap-2 w-4/5 mx-8 mt-2">
         <div>
-            <input @click="sazi=1" type="radio" name="sazi" id="kosazi" value="1" class="hidden peer" checked>
+            <input @click="sazi=1" type="radio" name="sazi" id="kosazi" value="1" class="hidden peer m-0" checked>
             <label for="kosazi"
-                class="flex flex-col w-full max-w-lg mx-auto text-center border-2 rounded-2xl border-gray-900 p-2 my-4 text-3xl peer-checked:bg-yellow-200">小さじ</label>
+                class="flex flex-col w-full max-w-lg mx-3 text-center border-2 rounded-2xl border-gray-900 p-2 my-4 text-3xl peer-checked:bg-yellow-200">小さじ</label>
         </div>
         <div>
-            <input @click="sazi=3" type="radio" name="sazi" id="oosazi" value="3" class="hidden peer">
+            <input @click="sazi=3" type="radio" name="sazi" id="oosazi" value="3" class="hidden peer m-0">
             <label for="oosazi"
-                class="flex flex-col w-full max-w-lg mx-auto text-center border-2 rounded-2xl border-gray-900 p-2 my-4 text-3xl peer-checked:bg-yellow-200">大さじ</label>
+                class="flex flex-col w-full max-w-lg mx-3 text-center border-2 rounded-2xl border-gray-900 p-2 my-4 text-3xl peer-checked:bg-yellow-200">大さじ</label>
         </div>
     </div>
 
-    <div class="flex flex-row justify-start gap-2 w-4/5 mx-auto mt-2">
+    <div class="flex flex-row justify-start gap-2 w-4/5 mx-8 mt-2">
         <button @click="input=Number(input)+0.5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">0.5杯</button>
         <button @click="input=Number(input)+1" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">１杯</button>
         <button @click="input=Number(input)+2" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">２杯</button>
         <button @click="input=Number(input)+3" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-xl">３杯</button>
     </div>
 
-    <div class="flex flex-row justify-start gap-2 w-4/5 mx-auto mt-2">
+    <div class="flex flex-row justify-start gap-2 w-4/5 mx-8 mt-2">
         <button @click="input=Number(input)+0.5" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">半分</button>
         <button @click="input=Number(input)*2" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">２倍</button>
         <button @click="input=Number(input)*3" class="w-20 my-4 text-center border-2 rounded-xl border-gray-900 p-2 text-2xl">３倍</button>
@@ -106,7 +106,7 @@
         </p>
     </div>
 
-    <div class="flex flex-row justify-end gap-3 w-4/5 mx-auto mt-12">
+    <div class="flex flex-row justify-end gap-3 w-4/5 mx-8 mt-12">
         <button @click="input=0" class="w-20 my-4 text-center border-2 rounded-xl border-gray-600 p-1">リセット</button>
     </div>
 
